--- a/dox/Test_Cases_SP1/test_case_07.dox
+++ b/dox/Test_Cases_SP1/test_case_07.dox
@@ -110,101 +110,64 @@ wrongOp	 0002	LABEL
 wrongOper	 0007	LABEL
 
 Instruction breakdowns:
-original source line: IncorrectHLTDMP KICKO FC:0;
-Line number: 1 LC: 0000 Label: IncorrectHLTDMP,
-instruction/Directive: KICKO Binary Equivalent: ------
-Operand 1: FC:0	Binary Equivalent: 0
+LC	Object Code	Address Status	Line Num	Source Line
+(hex)	(hex)	src:, dest:	(dec)
+0000	------------	src: -,dest:-	1	IncorrectHLTDMP KICKO FC:0;
+errors:
 
-
-original source line: newstart KICKO FC:10;
-Line number: 2 LC: 0000 Label: newstart,
-instruction/Directive: KICKO Binary Equivalent: ------
-Operand 1: FC:10	Binary Equivalent: 0
+0000	------------	src: -,dest:-	2	newstart KICKO FC:10;
+errors:
 ERROR: 151: Directive `KICKO' must be placed at the first line of the source file
 
-
-original source line: minMinus1    HLT FC:-4097;
-Line number: 3 LC: 0000 Label: minMinus1,
-instruction/Directive: HLT Binary Equivalent: 111111
-Operand 1: FC:-4097	Binary Equivalent: 11111111111111111110111111111111
+0000	F4000000	src: A,dest:-	3	minMinus1    HLT FC:-4097;
+errors:
 ERROR: 075: Operand `FC' for `HLT' instruction must be within range: [-4096, 4095]
 
-
-original source line: maxPlus1     HLT FC:4096;
-Line number: 4 LC: 0001 Label: maxPlus1,
-instruction/Directive: HLT Binary Equivalent: 111111
-Operand 1: FC:4096	Binary Equivalent: 1000000000000
+0001	F4000000	src: A,dest:-	4	maxPlus1     HLT FC:4096;
+errors:
 ERROR: 075: Operand `FC' for `HLT' instruction must be within range: [-4096, 4095]
 
+0002	F4000000	src: -,dest:-	5	wrongOp      HLT FL:0;
+errors:
+ERROR: 043: Missing `FC' or `EX' operand to `HLT' instruction
 
-original source line: wrongOp      HLT FL:0;
-Line number: 5 LC: 0002 Label: wrongOp,
-instruction/Directive: HLT Binary Equivalent: 111111
-Operand 1: FL:0	Binary Equivalent: 0
-ERROR: HLT should have exactly one operand: "FC"
+0003	F4000000	src: -,dest:-	6	extraOp      HLT FC:1, FC:2;
+errors:
+ERROR: 043: Missing `FC' or `EX' operand to `HLT' instruction
 
+0004	F4000000	src: -,dest:-	7	noOp         HLT;
+errors:
+ERROR: 043: Missing `FC' or `EX' operand to `HLT' instruction
 
-original source line: extraOp      HLT FC:1, FC:2;
-Line number: 6 LC: 0003 Label: extraOp,
-instruction/Directive: HLT Binary Equivalent: 111111
-Operand 1: FC:1	Binary Equivalent: 0
-Operand 2: FC:2	Binary Equivalent: 0
-ERROR: HLT should have exactly one operand: "FC"
-
-
-original source line: noOp         HLT;
-Line number: 7 LC: 0004 Label: noOp,
-instruction/Directive: HLT Binary Equivalent: 111111
-ERROR: HLT should have exactly one operand: "FC"
-
-
-original source line: minMinusOne  DMP FC:0;
-Line number: 8 LC: 0005 Label: minMinusOne,
-instruction/Directive: DMP Binary Equivalent: 111110
-Operand 1: FC:0	Binary Equivalent: 0
+0005	F4000000	src: A,dest:-	8	minMinusOne  DMP FC:0;
+errors:
 ERROR: 075: Operand `FC' for `DMP' instruction must be within range: [1, 3]
 
-
-original source line: maxPlusOne   DMP FC:4;
-Line number: 9 LC: 0006 Label: maxPlusOne,
-instruction/Directive: DMP Binary Equivalent: 111110
-Operand 1: FC:4	Binary Equivalent: 100
+0006	F4000000	src: A,dest:-	9	maxPlusOne   DMP FC:4;
+errors:
 ERROR: 075: Operand `FC' for `DMP' instruction must be within range: [1, 3]
 
+0007	F4000000	src: -,dest:-	10	wrongOper    DMP FL:0;
+errors:
+ERROR: 043: Missing `FC' or `EX' operand to `DMP' instruction
 
-original source line: wrongOper    DMP FL:0;
-Line number: 10 LC: 0007 Label: wrongOper,
-instruction/Directive: DMP Binary Equivalent: 111110
-Operand 1: FL:0	Binary Equivalent: 0
-ERROR: DMP should have exactly one operand: "FC"
+0008	F4000000	src: -,dest:-	11	extraOper    DMP FC:1, FC:2;
+errors:
+ERROR: 043: Missing `FC' or `EX' operand to `DMP' instruction
 
+0009	F4000000	src: -,dest:-	12	noOper       DMP;
+errors:
+ERROR: 043: Missing `FC' or `EX' operand to `DMP' instruction
 
-original source line: extraOper    DMP FC:1, FC:2;
-Line number: 11 LC: 0008 Label: extraOper,
-instruction/Directive: DMP Binary Equivalent: 111110
-Operand 1: FC:1	Binary Equivalent: 0
-Operand 2: FC:2	Binary Equivalent: 0
-ERROR: DMP should have exactly one operand: "FC"
-
-
-original source line: noOper       DMP;
-Line number: 12 LC: 0009 Label: noOper,
-instruction/Directive: DMP Binary Equivalent: 111110
-ERROR: DMP should have exactly one operand: "FC"
-
-
-original source line: NOP FC:0;
-Line number: 13 LC: 000A Label: ,
-instruction/Directive: NOP Binary Equivalent: 111101
-Operand 1: FC:0	Binary Equivalent: 0
+000A	F4000000	src: -,dest:-	13	NOP FC:0;
+errors:
 ERROR: 049: Too many operands to `NOP' instruction.
 
-
-original source line: END LR:correctHLTDMP; deliberately incorrect lr.
-Line number: 14 LC: 000B Label: ,
-instruction/Directive: END Binary Equivalent: ------
-Operand 1: LR:correctHLTDMP	Binary Equivalent: 0
+000B	------------	src: -,dest:-	14	END LR:correctHLTDMP; deliberately incorrect lr.
+errors:
 ERROR: 113: LR:label must match KICKO label
+
 </pre>
+
 
 */
