--- a/dox/Test_Cases_SP1/test_case_08.dox
+++ b/dox/Test_Cases_SP1/test_case_08.dox
@@ -8,6 +8,7 @@
 <span style="font-style:italic;color:#800080;">notEnd</span>		<span style="font-weight:bold;color:#000080;">DMP</span> <span style="color:#0000ff;">FC</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">1</span><span style="color:#ff0000;">;</span>
 <span style="font-style:italic;color:#800080;">notEndYet</span>	<span style="font-weight:bold;color:#000080;">DMP</span> <span style="color:#0000ff;">FC</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">1</span><span style="color:#ff0000;">;</span>
 <span style="font-style:italic;color:#800080;">nope</span>		<span style="font-weight:bold;color:#000080;">DMP</span> <span style="color:#0000ff;">FC</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">1</span><span style="color:#ff0000;">;</span>
+
 </pre>
 <br />
 <h1>Symbol table</h1>
@@ -52,37 +53,27 @@ notEnd	 0000	LABEL
 notEndYet	 0001	LABEL
 
 Instruction breakdowns:
-original source line: LinePastEnd	KICKO FC:0;
-Line number: 1 LC: 0000 Label: LinePastEnd,
-instruction/Directive: KICKO Binary Equivalent: ------
-Operand 1: FC:0	Binary Equivalent: 0
+LC	Object Code	Address Status	Line Num	Source Line
+(hex)	(hex)	src:, dest:	(dec)
+0000	------------	src: -,dest:-	1	LinePastEnd	KICKO FC:0;
+errors:
 
+0000	------------	src: -,dest:-	2	END  		LR:LinePastEnd;
+errors:
 
-original source line: END  		LR:LinePastEnd;
-Line number: 2 LC: 0000 Label: ,
-instruction/Directive: END Binary Equivalent: ------
-Operand 1: LR:LinePastEnd	Binary Equivalent: 0
-
-
-original source line: notEnd		DMP FC:1;
-Line number: 3 LC: 0000 Label: notEnd,
-instruction/Directive: DMP Binary Equivalent: 111110
-Operand 1: FC:1	Binary Equivalent: 1
+0000	F8000001	src: A,dest:-	3	notEnd		DMP FC:1;
+errors:
 152: Out of Memory.
 
-
-original source line: notEndYet	DMP FC:1;
-Line number: 4 LC: 0001 Label: notEndYet,
-instruction/Directive: DMP Binary Equivalent: 111110
-Operand 1: FC:1	Binary Equivalent: 1
+0001	F8000001	src: A,dest:-	4	notEndYet	DMP FC:1;
+errors:
 152: Out of Memory.
 
-
-original source line: nope		DMP FC:1;
-Line number: 5 LC: 0002 Label: nope,
-instruction/Directive: DMP Binary Equivalent: 111110
-Operand 1: FC:1	Binary Equivalent: 1
+0002	F8000001	src: A,dest:-	5	nope		DMP FC:1;
+errors:
 152: Out of Memory.
+
 </pre>
+
 
 */
