--- a/dox/Test_Cases_SP1/test_case_18.dox
+++ b/dox/Test_Cases_SP1/test_case_18.dox
@@ -66,142 +66,76 @@ y	 000F	LABEL
 z	 0010	LABEL
 
 Instruction breakdowns:
-original source line: shiftINCOR	KICKO FC:0;
-Line number: 1 LC: 0000 Label: shiftINCOR,
-instruction/Directive: KICKO Binary Equivalent: ------
-Operand 1: FC:0	Binary Equivalent: 0
+LC	Object Code	Address Status	Line Num	Source Line
+(hex)	(hex)	src:, dest:	(dec)
+0000	------------	src: -,dest:-	1	shiftINCOR	KICKO FC:0;
+errors:
 
+0000	0087000E	src: R,dest:-	2			MOVD  DR:7,	FM:x ;place x in register 1 
+errors:
 
-original source line: 		MOVD  DR:7,	FM:x ;place x in register 1 
-Line number: 2 LC: 0000 Label: ,
-instruction/Directive: MOVD Binary Equivalent: 000000
-Operand 1: DR:7	Binary Equivalent: 111
-Operand 2: FM:x	Binary Equivalent: 1110
+0001	3081000F	src: R,dest:-	3			ISUB  DR:1,	FM:y ;add (x+y) 
+errors:
 
+0002	00180010	src: -,dest:R	4			MOVD  FR:1,	DM:z ;store x+y into z 2 
+errors:
 
-original source line: 		ISUB  DR:1,	FM:y ;add (x+y) 
-Line number: 3 LC: 0001 Label: ,
-instruction/Directive: ISUB Binary Equivalent: 001100
-Operand 1: DR:1	Binary Equivalent: 1
-Operand 2: FM:y	Binary Equivalent: 1111
+0003	F4000000	src: A,dest:-	5			ROL   FX:1, 	FC:4; 
+errors:
+ERROR: 041: Missing `{DR}, or {DX}' operand to `ROL' instruction
 
+0004	F4000000	src: A,dest:-	6			ISHR  FL:1,	FC:4; 
+errors:
+ERROR: 041: Missing `{DR}, or {DX}' operand to `ISHR' instruction
 
-original source line: 		MOVD  FR:1,	DM:z ;store x+y into z 2 
-Line number: 4 LC: 0002 Label: ,
-instruction/Directive: MOVD Binary Equivalent: 000000
-Operand 1: FR:1	Binary Equivalent: 1
-Operand 2: DM:z	Binary Equivalent: 10000
+0005	F4000000	src: A,dest:-	7			ISHL  NW:1, 	FC:4; 
+errors:
+ERROR: 041: Missing `{DR}, or {DX}' operand to `ISHL' instruction
 
+0006	F4000000	src: A,dest:-	8			ISRA  LR:1,	FC:4; 
+errors:
+ERROR: 041: Missing `{DR}, or {DX}' operand to `ISRA' instruction
 
-original source line: 		ROL   FX:1, 	FC:4; 
-Line number: 5 LC: 0003 Label: ,
-instruction/Directive: ROL Binary Equivalent: 011100
-Operand 1: FX:1	Binary Equivalent: 0
-Operand 2: FC:4	Binary Equivalent: 0
-ERROR: 046: Operand `FX' is inapplicable for `ROL' instruction
+0007	F4000000	src: A,dest:-	9			ISLA  ST:1,	FC:4; 
+errors:
+ERROR: 041: Missing `{DR}, or {DX}' operand to `ISLA' instruction
 
+0008	F4000000	src: A,dest:-	10			ROR   FM:1, 	FC:4; 
+errors:
+ERROR: 041: Missing `{DR}, or {DX}' operand to `ROR' instruction
 
-original source line: 		ISHR  FL:1,	FC:4; 
-Line number: 6 LC: 0004 Label: ,
-instruction/Directive: ISHR Binary Equivalent: 011000
-Operand 1: FL:1	Binary Equivalent: 0
-Operand 2: FC:4	Binary Equivalent: 0
-ERROR: 046: Operand `FL' is inapplicable for `ISHR' instruction
+0009	F4000000	src: A,dest:-	11			ROL   EX:1, 	FC:4; 
+errors:
+ERROR: 055: Operand not valid with operand combination `EX' and `FC'.
 
+000A	F4000000	src: A,dest:-	12			ISHR  DM:1, 	FC:4; 
+errors:
+ERROR: 041: Missing `{DR}, or {DX}' operand to `ISHR' instruction
 
-original source line: 		ISHL  NW:1, 	FC:4; 
-Line number: 7 LC: 0005 Label: ,
-instruction/Directive: ISHL Binary Equivalent: 011001
-Operand 1: NW:1	Binary Equivalent: 0
-Operand 2: FC:4	Binary Equivalent: 0
-ERROR: 046: Operand `NW' is inapplicable for `ISHL' instruction
-
-
-original source line: 		ISRA  LR:1,	FC:4; 
-Line number: 8 LC: 0006 Label: ,
-instruction/Directive: ISRA Binary Equivalent: 011010
-Operand 1: LR:1	Binary Equivalent: 0
-Operand 2: FC:4	Binary Equivalent: 0
-ERROR: 046: Operand `LR' is inapplicable for `ISRA' instruction
-
-
-original source line: 		ISLA  ST:1,	FC:4; 
-Line number: 9 LC: 0007 Label: ,
-instruction/Directive: ISLA Binary Equivalent: 011011
-Operand 1: ST:1	Binary Equivalent: 0
-Operand 2: FC:4	Binary Equivalent: 0
-ERROR: 046: Operand `ST' is inapplicable for `ISLA' instruction
-
-
-original source line: 		ROR   FM:1, 	FC:4; 
-Line number: 10 LC: 0008 Label: ,
-instruction/Directive: ROR Binary Equivalent: 011101
-Operand 1: FM:1	Binary Equivalent: 0
-Operand 2: FC:4	Binary Equivalent: 0
-ERROR: 046: Operand `FM' is inapplicable for `ROR' instruction
-
-
-original source line: 		ROL   EX:1, 	FC:4; 
-Line number: 11 LC: 0009 Label: ,
-instruction/Directive: ROL Binary Equivalent: 011100
-Operand 1: EX:1	Binary Equivalent: 0
-Operand 2: FC:4	Binary Equivalent: 0
-ERROR: 046: Operand `EX' is inapplicable for `ROL' instruction
-
-
-original source line: 		ISHR  DM:1, 	FC:4; 
-Line number: 12 LC: 000A Label: ,
-instruction/Directive: ISHR Binary Equivalent: 011000
-Operand 1: DM:1	Binary Equivalent: 0
-Operand 2: FC:4	Binary Equivalent: 0
-ERROR: 046: Operand `DM' is inapplicable for `ISHR' instruction
-
-
-original source line: 		ISHR  DM:1; 
-Line number: 13 LC: 000B Label: ,
-instruction/Directive: ISHR Binary Equivalent: 011000
-Operand 1: DM:1	Binary Equivalent: 0
+000B	F4000000	src: -,dest:-	13			ISHR  DM:1; 
+errors:
 ERROR: 052: Too few operands to `ISHR' instruction
 
+000C	A0810010	src: R,dest:-	14			IWSR  FM:z,	NW:1 ;output z 3 A0008007 R
+errors:
 
-original source line: 		IWSR  FM:z,	NW:1 ;output z 3 A0008007 R
-Line number: 14 LC: 000C Label: ,
-instruction/Directive: IWSR Binary Equivalent: 101000
-Operand 1: FM:z	Binary Equivalent: 10000
-Operand 2: NW:1	Binary Equivalent: 1
+000D	FC000000	src: A,dest:-	15			HLT   FC:0 ;halt program displax code 
+errors:
 
+000E	0000000A	src: A,dest:-	16	x		num   FC:10 ;define data element 
+errors:
 
-original source line: 		HLT   FC:0 ;halt program displax code 
-Line number: 15 LC: 000D Label: ,
-instruction/Directive: HLT Binary Equivalent: 111111
-Operand 1: FC:0	Binary Equivalent: 0
+000F	0000006F	src: A,dest:-	17	y 		num   FC:111 ;define data element 
+errors:
 
+0010	00000000	src: A,dest:-	18	z	 	num   FC:0 ;define data element 
+errors:
 
-original source line: x		num   FC:10 ;define data element 
-Line number: 16 LC: 000E Label: x,
-instruction/Directive: NUM Binary Equivalent: ------
-Operand 1: FC:10	Binary Equivalent: 1010
-
-
-original source line: y 		num   FC:111 ;define data element 
-Line number: 17 LC: 000F Label: y,
-instruction/Directive: NUM Binary Equivalent: ------
-Operand 1: FC:111	Binary Equivalent: 1101111
-
-
-original source line: z	 	num   FC:0 ;define data element 
-Line number: 18 LC: 0010 Label: z,
-instruction/Directive: NUM Binary Equivalent: ------
-Operand 1: FC:0	Binary Equivalent: 0
-
-
-original source line: 		END   LR:shiftONCOR;end of program E
-Line number: 19 LC: 0011 Label: ,
-instruction/Directive: END Binary Equivalent: ------
-Operand 1: LR:shiftONCOR	Binary Equivalent: 0
+0011	------------	src: -,dest:-	19			END   LR:shiftONCOR;end of program E
+errors:
 ERROR: 113: LR:label must match KICKO label
-
 
 </pre>
 
-!*/
+
+*/
