--- a/dox/Test_Cases_SP1/test_case_03.dox
+++ b/dox/Test_Cases_SP1/test_case_03.dox
@@ -69,51 +69,33 @@ max	 0003	LABEL
 min	 0004	LABEL
 
 Instruction breakdowns:
-original source line: CorrectDMPHLT KICKO FC:0;
-Line number: 1 LC: 0000 Label: CorrectDMPHLT,
-instruction/Directive: KICKO Binary Equivalent: ------
-Operand 1: FC:0	Binary Equivalent: 0
+LC	Object Code	Address Status	Line Num	Source Line
+(hex)	(hex)	src:, dest:	(dec)
+0000	------------	src: -,dest:-	1	CorrectDMPHLT KICKO FC:0;
+errors:
 
+0000	F8000001	src: A,dest:-	2	lvl1 DMP FC:1;
+errors:
 
-original source line: lvl1 DMP FC:1;
-Line number: 2 LC: 0000 Label: lvl1,
-instruction/Directive: DMP Binary Equivalent: 111110
-Operand 1: FC:1	Binary Equivalent: 1
+0001	F8000002	src: A,dest:-	3	lvl2 DMP FC:2;
+errors:
 
+0002	F8000003	src: A,dest:-	4	lvl3 DMP FC:3;
+errors:
 
-original source line: lvl2 DMP FC:2;
-Line number: 3 LC: 0001 Label: lvl2,
-instruction/Directive: DMP Binary Equivalent: 111110
-Operand 1: FC:2	Binary Equivalent: 10
+0003	FC000FFF	src: A,dest:-	5	max HLT FC:4095;
+errors:
 
+0004	FC00F000	src: A,dest:-	6	min HLT FC:-4096;
+errors:
 
-original source line: lvl3 DMP FC:3;
-Line number: 4 LC: 0002 Label: lvl3,
-instruction/Directive: DMP Binary Equivalent: 111110
-Operand 1: FC:3	Binary Equivalent: 11
+0005	F4000000	src: -,dest:-	7	NOP;
+errors:
 
+0006	------------	src: -,dest:-	8	END LR:CorrectDMPHLT;
+errors:
 
-original source line: max HLT FC:4095;
-Line number: 5 LC: 0003 Label: max,
-instruction/Directive: HLT Binary Equivalent: 111111
-Operand 1: FC:4095	Binary Equivalent: 111111111111
-
-
-original source line: min HLT FC:-4096;
-Line number: 6 LC: 0004 Label: min,
-instruction/Directive: HLT Binary Equivalent: 111111
-Operand 1: FC:-4096	Binary Equivalent: 11111111111111111111000000000000
-
-
-original source line: NOP;
-Line number: 7 LC: 0005 Label: ,
-instruction/Directive: NOP Binary Equivalent: 111101
-
-
-original source line: END LR:CorrectDMPHLT;
-Line number: 8 LC: 0006 Label: ,
-instruction/Directive: END Binary Equivalent: ------
-Operand 1: LR:CorrectDMPHLT	Binary Equivalent: 0
 </pre>
+
 
 */
