--- a/dox/Test_Cases_SP1/test_case_05.dox
+++ b/dox/Test_Cases_SP1/test_case_05.dox
@@ -108,90 +108,45 @@ outInt2	 0005	LABEL
 outInt3	 0006	LABEL
 
 Instruction breakdowns:
-original source line: CorrectUIGIO	KICKO FC:4;
-Line number: 1 LC: 0004 Label: CorrectUIGIO,
-instruction/Directive: KICKO Binary Equivalent: ------
-Operand 1: FC:4	Binary Equivalent: 0
+LC	Object Code	Address Status	Line Num	Source Line
+(hex)	(hex)	src:, dest:	(dec)
+0004	------------	src: -,dest:-	1	CorrectUIGIO	KICKO FC:4;
+errors:
 
+0004	A0800FFF	src: R,dest:-	2	outInt1 	IWSR NW:0,    FM:4095;
+errors:
 
-original source line: outInt1 	IWSR NW:0,    FM:4095;
-Line number: 2 LC: 0004 Label: outInt1,
-instruction/Directive: IWSR Binary Equivalent: 101000
-Operand 1: NW:0	Binary Equivalent: 0
-Operand 2: FM:4095	Binary Equivalent: 111111111111
+0005	A0811000	src: R,dest:-	3	outInt2 	IWSR NW:1,    FM:0,     FX:1;
+errors:
 
+0006	A1820FFF	src: R,dest:-	4	outInt3 	IWSR NW:2,    FL:4095;
+errors:
 
-original source line: outInt2 	IWSR NW:1,    FM:0,     FX:1;
-Line number: 3 LC: 0005 Label: outInt2,
-instruction/Directive: IWSR Binary Equivalent: 101000
-Operand 1: NW:1	Binary Equivalent: 1
-Operand 2: FM:0	Binary Equivalent: 0
-Operand 3: FX:1	Binary Equivalent: 1
+0007	A4380000	src: -,dest:R	5	inInt1		IRKB NW:3,    DM:0;
+errors:
 
+0008	A4482020	src: -,dest:R	6	inInt2		IRKB NW:4,    DM:32,	DX:2;
+errors:
 
-original source line: outInt3 	IWSR NW:2,    FL:4095;
-Line number: 4 LC: 0006 Label: outInt3,
-instruction/Directive: IWSR Binary Equivalent: 101000
-Operand 1: NW:2	Binary Equivalent: 10
-Operand 2: FL:4095	Binary Equivalent: 111111111111
+0009	A8850040	src: R,dest:-	7	outChar1	CWSR NW:5,    FM:64;
+errors:
 
+000A	A8863080	src: R,dest:-	8	outChar2	CWSR NW:6,    FM:128,	FX:3;
+errors:
 
-original source line: inInt1		IRKB NW:3,    DM:0;
-Line number: 5 LC: 0007 Label: inInt1,
-instruction/Directive: IRKB Binary Equivalent: 101001
-Operand 1: NW:3	Binary Equivalent: 11
-Operand 2: DM:0	Binary Equivalent: 0
+000B	A9870000	src: R,dest:-	9	outChar3	CWSR NW:7,    FL:0;
+errors:
 
+000C	B0880200	src: -,dest:R	10	inChar1		CRKB NW:8,    DM:512;
+errors:
 
-original source line: inInt2		IRKB NW:4,    DM:32,	DX:2;
-Line number: 6 LC: 0008 Label: inInt2,
-instruction/Directive: IRKB Binary Equivalent: 101001
-Operand 1: NW:4	Binary Equivalent: 100
-Operand 2: DM:32	Binary Equivalent: 100000
-Operand 3: DX:2	Binary Equivalent: 10
+000D	B0F87FFF	src: -,dest:R	11	inChar2		CRKB NW:15, DM:4095, 	DX:7;
+errors:
 
+000E	------------	src: -,dest:-	12	END  		LR:CorrectUIGIO;
+errors:
 
-original source line: outChar1	CWSR NW:5,    FM:64;
-Line number: 7 LC: 0009 Label: outChar1,
-instruction/Directive: CWSR Binary Equivalent: 101010
-Operand 1: NW:5	Binary Equivalent: 101
-Operand 2: FM:64	Binary Equivalent: 1000000
-
-
-original source line: outChar2	CWSR NW:6,    FM:128,	FX:3;
-Line number: 8 LC: 000A Label: outChar2,
-instruction/Directive: CWSR Binary Equivalent: 101010
-Operand 1: NW:6	Binary Equivalent: 110
-Operand 2: FM:128	Binary Equivalent: 10000000
-Operand 3: FX:3	Binary Equivalent: 11
-
-
-original source line: outChar3	CWSR NW:7,    FL:0;
-Line number: 9 LC: 000B Label: outChar3,
-instruction/Directive: CWSR Binary Equivalent: 101010
-Operand 1: NW:7	Binary Equivalent: 111
-Operand 2: FL:0	Binary Equivalent: 0
-
-
-original source line: inChar1		CRKB NW:8,    DM:512;
-Line number: 10 LC: 000C Label: inChar1,
-instruction/Directive: CRKB Binary Equivalent: 101100
-Operand 1: NW:8	Binary Equivalent: 1000
-Operand 2: DM:512	Binary Equivalent: 1000000000
-
-
-original source line: inChar2		CRKB NW:15, DM:4095, 	DX:7;
-Line number: 11 LC: 000D Label: inChar2,
-instruction/Directive: CRKB Binary Equivalent: 101100
-Operand 1: NW:15	Binary Equivalent: 1111
-Operand 2: DM:4095	Binary Equivalent: 111111111111
-Operand 3: DX:7	Binary Equivalent: 111
-
-
-original source line: END  		LR:CorrectUIGIO;
-Line number: 12 LC: 000E Label: ,
-instruction/Directive: END Binary Equivalent: ------
-Operand 1: LR:CorrectUIGIO	Binary Equivalent: 0
 </pre>
+
 
 */
