--- a/dox/Test_Cases_SP1/test_case_06.dox
+++ b/dox/Test_Cases_SP1/test_case_06.dox
@@ -93,82 +93,52 @@ minM1Reg	 0000	LABEL
 wrongOper	 0006	LABEL
 
 Instruction breakdowns:
-original source line: IncorrectCLR KICKO FL:0;
-Line number: 1 LC: 0000 Label: IncorrectCLR,
-instruction/Directive: KICKO Binary Equivalent: ------
-Operand 1: FL:0	Binary Equivalent: 0
+LC	Object Code	Address Status	Line Num	Source Line
+(hex)	(hex)	src:, dest:	(dec)
+0000	------------	src: -,dest:-	1	IncorrectCLR KICKO FL:0;
+errors:
 ERROR: 040: Missing `FC' operand to `KICKO' directive
 
-
-original source line: minM1Reg clr dr:-1;
-Line number: 2 LC: 0000 Label: minM1Reg,
-instruction/Directive: CLR Binary Equivalent: 010000
-Operand 1: DR:-1	Binary Equivalent: 11111111111111111111111111111111
+0000	F4000000	src: -,dest:-	2	minM1Reg clr dr:-1;
+errors:
 ERROR: 072: Operand `DR' for `CLR' instruction must be within range: [1,7]
 
-
-original source line: minM1Idx clr dx:0;
-Line number: 3 LC: 0001 Label: minM1Idx,
-instruction/Directive: CLR Binary Equivalent: 010000
-Operand 1: DX:0	Binary Equivalent: 0
+0001	F4000000	src: -,dest:-	3	minM1Idx clr dx:0;
+errors:
 ERROR: 072: Operand `DX' for `CLR' instruction must be within range: [1,7]
 
-
-original source line: maxP1Reg clr dr:8;
-Line number: 4 LC: 0002 Label: maxP1Reg,
-instruction/Directive: CLR Binary Equivalent: 010000
-Operand 1: DR:8	Binary Equivalent: 1000
+0002	F4000000	src: -,dest:-	4	maxP1Reg clr dr:8;
+errors:
 ERROR: 072: Operand `DR' for `CLR' instruction must be within range: [1,7]
 
-
-original source line: maxP1Idx clr dx:8;
-Line number: 5 LC: 0003 Label: maxP1Idx,
-instruction/Directive: CLR Binary Equivalent: 010000
-Operand 1: DX:8	Binary Equivalent: 1000
+0003	F4000000	src: -,dest:-	5	maxP1Idx clr dx:8;
+errors:
 ERROR: 072: Operand `DX' for `CLR' instruction must be within range: [1,7]
 
-
-original source line: extra1 clr dr:0, dr:0;
-Line number: 6 LC: 0004 Label: extra1,
-instruction/Directive: CLR Binary Equivalent: 010000
-Operand 1: DR:0	Binary Equivalent: 0
-Operand 2: DR:0	Binary Equivalent: 0
+0004	F4000000	src: -,dest:-	6	extra1 clr dr:0, dr:0;
+errors:
 ERROR: 049: Too many operands to `CLR' instruction.
 
-
-original source line: extra2 clr dx:0, dr:0;
-Line number: 7 LC: 0005 Label: extra2,
-instruction/Directive: CLR Binary Equivalent: 010000
-Operand 1: DX:0	Binary Equivalent: 0
-Operand 2: DR:0	Binary Equivalent: 0
+0005	F4000000	src: -,dest:-	7	extra2 clr dx:0, dr:0;
+errors:
 ERROR: 049: Too many operands to `CLR' instruction.
 
-
-original source line: wrongOper clr ex:1+1;
-Line number: 8 LC: 0006 Label: wrongOper,
-instruction/Directive: CLR Binary Equivalent: 010000
-Operand 1: EX:1+1	Binary Equivalent: 0
+0006	F4000000	src: -,dest:-	8	wrongOper clr ex:1+1;
+errors:
 ERROR: 046: Operand `EX' is inapplicable for `CLR' instruction
 
-
-original source line: extraOperA CLRA DR:0;
-Line number: 9 LC: 0007 Label: extraOperA,
-instruction/Directive: CLRA Binary Equivalent: 010001
-Operand 1: DR:0	Binary Equivalent: 0
+0007	F4000000	src: -,dest:-	9	extraOperA CLRA DR:0;
+errors:
 ERROR: 049: Too many operands to `CLRA' instruction.
 
-
-original source line: extraOperX CLRX FM:0;
-Line number: 10 LC: 0008 Label: extraOperX,
-instruction/Directive: CLRX Binary Equivalent: 010010
-Operand 1: FM:0	Binary Equivalent: 0
+0008	F4000000	src: -,dest:-	10	extraOperX CLRX FM:0;
+errors:
 ERROR: 049: Too many operands to `CLRX' instruction.
 
-
-original source line: END; deliberately incorrect.
-Line number: 11 LC: 0009 Label: ,
-instruction/Directive: END Binary Equivalent: ------
+0009	------------	src: -,dest:-	11	END; deliberately incorrect.
+errors:
 ERROR: 040: Missing `LR' operand to `END' directive
+
 </pre>
 
 */
