--- a/dox/Test_Cases_SP1/test_case_16.dox
+++ b/dox/Test_Cases_SP1/test_case_16.dox
@@ -10,9 +10,8 @@
 <span style="font-weight:bold;color:#000080;">trdr</span> <span style="color:#0000ff;">dx</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">3</span> <span style="color:#ff0000;">,</span><span style="color:#0000ff;">dm</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">3</span> <span style="color:#ff0000;">,</span><span style="color:#0000ff;">Fx</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">3</span><span style="color:#ff0000;">;</span>
 <span style="font-weight:bold;color:#000080;">trdr</span> <span style="color:#0000ff;">dm</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">3</span> <span style="color:#ff0000;">,</span><span style="color:#0000ff;">Fr</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
 <span style="font-weight:bold;color:#000080;">trdr</span> <span style="color:#0000ff;">dm</span><span style="color:#ff0000;">:</span> <span style="color:#00e1af;">5</span><span style="color:#ff0000;">,</span><span style="color:#0000ff;">fx</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
-<span style="font-weight:bold;color:#000080;">trlk</span> <span style="color:#0000ff;">dr</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span> <span style="color:#ff0000;">,</span><span style="color:#0000ff;">fm</span><span style="color:#ff0000;">:</span> <span style="color:#00e1af;">5</span><span style="color:#ff0000;">,</span><span style="color:#0000ff;">Fx</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
-<span style="font-weight:bold;color:#000080;">trlk</span> <span style="color:#0000ff;">dr</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span> <span style="color:#ff0000;">,</span><span style="color:#0000ff;">fm</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
-<span style="font-weight:bold;color:#000080;">trlk</span> <span style="color:#0000ff;">dr</span><span style="color:#ff0000;">:</span> <span style="color:#00e1af;">5</span><span style="color:#ff0000;">,</span><span style="color:#0000ff;">fl</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
+<span style="font-weight:bold;color:#000080;">trlk</span> <span style="color:#0000ff;">dr</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span> <span style="color:#ff0000;">,</span><span style="color:#0000ff;">dm</span><span style="color:#ff0000;">:</span> <span style="color:#00e1af;">5</span><span style="color:#ff0000;">,</span><span style="color:#0000ff;">dx</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
+<span style="font-weight:bold;color:#000080;">trlk</span> <span style="color:#0000ff;">dr</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span> <span style="color:#ff0000;">,</span><span style="color:#0000ff;">dm</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
 <span style="font-weight:bold;color:#000080;">ret</span> <span style="color:#0000ff;">dm</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
 <span style="font-weight:bold;color:#000080;">skt</span> <span style="color:#0000ff;">dr</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
 <span style="font-weight:bold;color:#000080;">tr</span> <span style="color:#0000ff;">dm</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
@@ -21,13 +20,9 @@
 <span style="font-weight:bold;color:#000080;">trdr</span> <span style="color:#0000ff;">dx</span><span style="color:#ff0000;">:</span> <span style="color:#00e1af;">5</span><span style="color:#ff0000;">,</span><span style="color:#0000ff;">dm</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span> <span style="color:#ff0000;">,</span><span style="color:#0000ff;">Fx</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
 <span style="font-weight:bold;color:#000080;">trdr</span> <span style="color:#0000ff;">dm</span><span style="color:#ff0000;">:</span> <span style="color:#00e1af;">5</span><span style="color:#ff0000;">,</span><span style="color:#0000ff;">Fr</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
 <span style="font-weight:bold;color:#000080;">trdr</span> <span style="color:#0000ff;">dm</span><span style="color:#ff0000;">:</span> <span style="color:#00e1af;">5</span><span style="color:#ff0000;">,</span><span style="color:#0000ff;">fx</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
-<span style="font-weight:bold;color:#000080;">trlk</span> <span style="color:#0000ff;">dr</span><span style="color:#ff0000;">:</span> <span style="color:#00e1af;">5</span><span style="color:#ff0000;">,</span><span style="color:#0000ff;">fm</span><span style="color:#ff0000;">:</span> <span style="color:#00e1af;">5</span><span style="color:#ff0000;">,</span><span style="color:#0000ff;">Fx</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
-<span style="font-weight:bold;color:#000080;">trlk</span> <span style="color:#0000ff;">dr</span><span style="color:#ff0000;">:</span> <span style="color:#00e1af;">5</span><span style="color:#ff0000;">,</span><span style="color:#0000ff;">fm</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
-<span style="font-weight:bold;color:#000080;">trlk</span> <span style="color:#0000ff;">dr</span><span style="color:#ff0000;">:</span> <span style="color:#00e1af;">5</span><span style="color:#ff0000;">,</span><span style="color:#0000ff;">fl</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
 <span style="font-weight:bold;color:#000080;">ret</span> <span style="color:#0000ff;">dm</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
 <span style="font-weight:bold;color:#000080;">skt</span> <span style="color:#0000ff;">dr</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">5</span><span style="color:#ff0000;">;</span>
  <span style="font-weight:bold;color:#000080;">end</span> <span style="color:#0000ff;">lr</span><span style="color:#ff0000;">:</span><span style="font-style:italic;color:#800080;">start</span><span style="color:#ff0000;">;</span>
-
 </pre>
 <br />
 <h1>Symbol table</h1>
@@ -51,171 +46,68 @@ Label:	LC:	Usage:	EquString:
 start	 0004	PROGNAME
 
 Instruction breakdowns:
-original source line: start kicko fc:4;
-Line number: 1 LC: 0004 Label: start,
-instruction/Directive: KICKO Binary Equivalent: ------
-Operand 1: FC:4	Binary Equivalent: 0
+LC	Object Code	Address Status	Line Num	Source Line
+(hex)	(hex)	src:, dest:	(dec)
+0004	------------	src: -,dest:-	1	start kicko fc:4;
+errors:
 
+0004	8C880005	src: -,dest:R	2	tr dm:5;
+errors:
 
-original source line: tr dm:5;
-Line number: 2 LC: 0004 Label: ,
-instruction/Directive: TR Binary Equivalent: 100011
-Operand 1: DM:5	Binary Equivalent: 101
+0005	8C884003	src: -,dest:R	3	tr dm:3 ,dx:4;
+errors:
 
+0006	90483004	src: -,dest:R	4	trdr dx:3 ,dm:4 ,Fr:4;
+errors:
 
-original source line: tr dm:3 ,dx:4;
-Line number: 3 LC: 0005 Label: ,
-instruction/Directive: TR Binary Equivalent: 100011
-Operand 1: DM:3	Binary Equivalent: 11
-Operand 2: DX:4	Binary Equivalent: 100
+0007	90B83003	src: -,dest:R	5	trdr dx:3 ,dm:3 ,Fx:3;
+errors:
 
+0008	90580003	src: -,dest:R	6	trdr dm:3 ,Fr:5;
+errors:
 
-original source line: trdr dx:3 ,dm:4 ,Fr:4;
-Line number: 4 LC: 0006 Label: ,
-instruction/Directive: TRDR Binary Equivalent: 100100
-Operand 1: DX:3	Binary Equivalent: 11
-Operand 2: DM:4	Binary Equivalent: 100
-Operand 3: FR:4	Binary Equivalent: 100
+0009	90D80005	src: -,dest:R	7	trdr dm: 5,fx:5;
+errors:
 
+000A	94585005	src: -,dest:R	8	trlk dr:5 ,dm: 5,dx:5;
+errors:
 
-original source line: trdr dx:3 ,dm:3 ,Fx:3;
-Line number: 5 LC: 0007 Label: ,
-instruction/Directive: TRDR Binary Equivalent: 100100
-Operand 1: DX:3	Binary Equivalent: 11
-Operand 2: DM:3	Binary Equivalent: 11
-Operand 3: FX:3	Binary Equivalent: 11
+000B	94580005	src: -,dest:R	9	trlk dr:5 ,dm:5;
+errors:
 
+000C	98880005	src: -,dest:R	10	ret dm:5;
+errors:
 
-original source line: trdr dm:3 ,Fr:5;
-Line number: 6 LC: 0008 Label: ,
-instruction/Directive: TRDR Binary Equivalent: 100100
-Operand 1: DM:3	Binary Equivalent: 11
-Operand 2: FR:5	Binary Equivalent: 101
+000D	9C850000	src: -,dest:-	11	skt dr:5;
+errors:
 
+000E	8C880005	src: -,dest:R	12	tr dm:5;
+errors:
 
-original source line: trdr dm: 5,fx:5;
-Line number: 7 LC: 0009 Label: ,
-instruction/Directive: TRDR Binary Equivalent: 100100
-Operand 1: DM:5	Binary Equivalent: 101
-Operand 2: FX:5	Binary Equivalent: 101
+000F	8C885005	src: -,dest:R	13	tr dm: 5,dx:5;
+errors:
 
+0010	90585005	src: -,dest:R	14	trdr dx: 5,dm: 5,Fr:5;
+errors:
 
-original source line: trlk dr:5 ,fm: 5,Fx:5;
-Line number: 8 LC: 000A Label: ,
-instruction/Directive: TRLK Binary Equivalent: 100101
-Operand 1: DR:5	Binary Equivalent: 101
-Operand 2: FM:5	Binary Equivalent: 101
-Operand 3: FX:5	Binary Equivalent: 101
+0011	90D85005	src: -,dest:R	15	trdr dx: 5,dm:5 ,Fx:5;
+errors:
 
+0012	90580005	src: -,dest:R	16	trdr dm: 5,Fr:5;
+errors:
 
-original source line: trlk dr:5 ,fm:5;
-Line number: 9 LC: 000B Label: ,
-instruction/Directive: TRLK Binary Equivalent: 100101
-Operand 1: DR:5	Binary Equivalent: 101
-Operand 2: FM:5	Binary Equivalent: 101
+0013	90D80005	src: -,dest:R	17	trdr dm: 5,fx:5;
+errors:
 
+0014	98880005	src: -,dest:R	18	ret dm:5;
+errors:
 
-original source line: trlk dr: 5,fl:5;
-Line number: 10 LC: 000C Label: ,
-instruction/Directive: TRLK Binary Equivalent: 100101
-Operand 1: DR:5	Binary Equivalent: 101
-Operand 2: FL:5	Binary Equivalent: 101
+0015	9C850000	src: -,dest:-	19	skt dr:5;
+errors:
 
-
-original source line: ret dm:5;
-Line number: 11 LC: 000D Label: ,
-instruction/Directive: RET Binary Equivalent: 100110
-Operand 1: DM:5	Binary Equivalent: 101
-
-
-original source line: skt dr:5;
-Line number: 12 LC: 000E Label: ,
-instruction/Directive: SKT Binary Equivalent: 100111
-Operand 1: DR:5	Binary Equivalent: 101
-
-
-original source line: tr dm:5;
-Line number: 13 LC: 000F Label: ,
-instruction/Directive: TR Binary Equivalent: 100011
-Operand 1: DM:5	Binary Equivalent: 101
-
-
-original source line: tr dm: 5,dx:5;
-Line number: 14 LC: 0010 Label: ,
-instruction/Directive: TR Binary Equivalent: 100011
-Operand 1: DM:5	Binary Equivalent: 101
-Operand 2: DX:5	Binary Equivalent: 101
-
-
-original source line: trdr dx: 5,dm: 5,Fr:5;
-Line number: 15 LC: 0011 Label: ,
-instruction/Directive: TRDR Binary Equivalent: 100100
-Operand 1: DX:5	Binary Equivalent: 101
-Operand 2: DM:5	Binary Equivalent: 101
-Operand 3: FR:5	Binary Equivalent: 101
-
-
-original source line: trdr dx: 5,dm:5 ,Fx:5;
-Line number: 16 LC: 0012 Label: ,
-instruction/Directive: TRDR Binary Equivalent: 100100
-Operand 1: DX:5	Binary Equivalent: 101
-Operand 2: DM:5	Binary Equivalent: 101
-Operand 3: FX:5	Binary Equivalent: 101
-
-
-original source line: trdr dm: 5,Fr:5;
-Line number: 17 LC: 0013 Label: ,
-instruction/Directive: TRDR Binary Equivalent: 100100
-Operand 1: DM:5	Binary Equivalent: 101
-Operand 2: FR:5	Binary Equivalent: 101
-
-
-original source line: trdr dm: 5,fx:5;
-Line number: 18 LC: 0014 Label: ,
-instruction/Directive: TRDR Binary Equivalent: 100100
-Operand 1: DM:5	Binary Equivalent: 101
-Operand 2: FX:5	Binary Equivalent: 101
-
-
-original source line: trlk dr: 5,fm: 5,Fx:5;
-Line number: 19 LC: 0015 Label: ,
-instruction/Directive: TRLK Binary Equivalent: 100101
-Operand 1: DR:5	Binary Equivalent: 101
-Operand 2: FM:5	Binary Equivalent: 101
-Operand 3: FX:5	Binary Equivalent: 101
-
-
-original source line: trlk dr: 5,fm:5;
-Line number: 20 LC: 0016 Label: ,
-instruction/Directive: TRLK Binary Equivalent: 100101
-Operand 1: DR:5	Binary Equivalent: 101
-Operand 2: FM:5	Binary Equivalent: 101
-
-
-original source line: trlk dr: 5,fl:5;
-Line number: 21 LC: 0017 Label: ,
-instruction/Directive: TRLK Binary Equivalent: 100101
-Operand 1: DR:5	Binary Equivalent: 101
-Operand 2: FL:5	Binary Equivalent: 101
-
-
-original source line: ret dm:5;
-Line number: 22 LC: 0018 Label: ,
-instruction/Directive: RET Binary Equivalent: 100110
-Operand 1: DM:5	Binary Equivalent: 101
-
-
-original source line: skt dr:5;
-Line number: 23 LC: 0019 Label: ,
-instruction/Directive: SKT Binary Equivalent: 100111
-Operand 1: DR:5	Binary Equivalent: 101
-
-
-original source line:  end lr:start;
-Line number: 24 LC: 001A Label: ,
-instruction/Directive: END Binary Equivalent: ------
-Operand 1: LR:start	Binary Equivalent: 0
-
+0016	------------	src: -,dest:-	20	 end lr:start;
+errors:
 
 </pre>
+
 */
